--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -3,7 +3,7 @@ title: SoulJerz Crew
 layout: default
 modal-id: 6
 date: 2016-04-18
-img: submarine.png
+img: souljerz.jpg
 alt: image-alt
 project-date: Ongoing
 client: SoulJerz Crew
