--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,15 +1,17 @@
 ---
-title: Manhattan Eats
+title: QuickTap
 layout: default
 modal-id: 4
 date: 2016-04-18
-img: cake.png
+img: quicktap.jpg
 alt: image-alt
-project-date: February 2016
-client: General Assembly
+project-date: March 2014
+client: General Assembly & HPE Haven OnDemand
 category: Android Development
-description: Manhattan Eats is a neighborhood guide app made in a fashion similar to the app Yelp. My app allows a user to browse through a pre-populated list of restaurants in the area, display the restaurant's information, and it allows you to map your way to the restaurant. I stored my restaurant data in an SQLite database and using a SQLiteOpenDatabaseHelper, my app can search, retrieve, and edit the columns of restaurant data. The app includes the use of an ArrayAdapter, Listeners, and Intents as well as the implementation of some material design.
----
+description: The function of the QuickTap is to make the task of ordering beers at a bar easier. QuickTap was another group project which was awarded 2nd place at GA & HPE's First Hackathon. The app features the use of HPEs speech recognition API to search for related beer information on BreweryDB. Additionally, the app has it's own SQLite Database allowing you to store said data for future use.
 
-<a href = "https://github.com/chris-shum/Project-2">Manhattan Eats on GitHub</a>
+---
+<a href = "https://community.havenondemand.com/t5/Blog/GA-HPE-Haven-OnDemand-Hackathon-an-Android-Hackathon/ba-p/2654">Hackathon Blog</a><br>
+<a href = "https://github.com/chris-shum/GA-HPE-Hackathon/tree/master/QuickTap">QuickTap on GitHub</a><br>
+<a href = "http://devpost.com/software/quicktap">QuickTap on Devpost</a>
 
