--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -8,8 +8,13 @@ alt: image-alt
 project-date: March 2016
 client: General Assembly
 category: Android Development
-description: Late.ly is a news aggregator app. It gathers specific web content into one location for easy viewing. This was my first Android group project and as a group project, there was a strong usage of Git/GitHub's branching and merge functions. The aggregator features APIs from Reddit, Foursquare, Meetup, and Weather.io. JSON data from the APIs are parsed using Gson and Retrofit through an AsyncTask. The interface features a TabLayout bar housing fragments which are customizable based on topics selected by the user. Each piece of data is displayed on a customized cards fitted onto a RecyclerView.
+description: Late.ly is a news aggregator app. It gathers specific web content into one location for easy viewing. This was my first Android group project and as a group project, there was a strong usage of Git's branching and merge functions. The aggregator features APIs from Reddit, Foursquare, Meetup, and Weather.io. JSON data from the APIs are parsed using Gson and Retrofit through an AsyncTask. The interface features a TabLayout bar housing fragments which are customizable based on topics selected by the user. Each piece of data is displayed on a customized cards fitted onto a RecyclerView.
 
 ---
 
-<a href = "https://github.com/chris-shum/Project-3">Late.ly on GitHub</a>
+<div style="text-align:center">
+<a href= "https://github.com/chris-shum/Project-3" target="_blank">
+<img alt='View on GitHub' src= "http://chris-shum.github.io/img/github.png" width="180"/>
+</a>
+</div>
+
