--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -5,13 +5,10 @@ modal-id: 4
 date: 2016-04-18
 img: quicktap.jpg
 alt: image-alt
-project-date: March 2014
-client: General Assembly & HPE Haven OnDemand
-category: Android Development
-description: The function of the QuickTap is to make the task of ordering beers at a bar easier. QuickTap was another group project which was awarded 2nd place at GA & HPE's First Hackathon. The app features the use of HPEs speech recognition API to search for related beer information on BreweryDB. Additionally, the app has it's own SQLite Database allowing you to store said data for future use.
+description: QuickTap was awarded 2nd Place at the GA & HPE Haven OnDemand Hackathon.  The function of the QuickTap is to simplify the task of ordering beers at a bar. The app features the use of HPE's speech recognition API to search for beer related information on BreweryDB. Additionally, the app has its own SQLite database allowing you to store said data for future use.
 
 ---
-<a href = "https://community.havenondemand.com/t5/Blog/GA-HPE-Haven-OnDemand-Hackathon-an-Android-Hackathon/ba-p/2654">Hackathon Blog</a><br>
+<a href = "https://community.havenondemand.com/t5/Blog/GA-HPE-Haven-OnDemand-Hackathon-an-Android-Hackathon/ba-p/2654">Read about the hackathon</a><br>
 <a href = "https://github.com/chris-shum/GA-HPE-Hackathon/tree/master/QuickTap">QuickTap on GitHub</a><br>
 <a href = "http://devpost.com/software/quicktap">QuickTap on Devpost</a>
 
