--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -5,11 +5,8 @@ modal-id: 6
 date: 2016-04-18
 img: souljerz.jpg
 alt: image-alt
-project-date: Ongoing
-client: SoulJerz Crew
-category: Dance Entertainment
 description: SoulJerz is a New Jersey based BBoy/BGirl crew whose aim is to spread love and the knowledge of the hip-hop culture around the globe. As a member of SoulJerz Dance Entertainment, I spend my time promoting the crew's message with my talents. From performing alongside my fellow crew mates, to teaching dance to the local community, to organizing events for said community. 
 
 ---
 
-<iframe src="https://player.vimeo.com/video/117054749" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/117054749" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
