--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -8,8 +8,11 @@ alt: image-alt
 project-date: February 2016
 client: General Assembly
 category: Android Development
-description: Manhattan Eats is a neighborhood guide app made in a fashion similar to the app Yelp. My app allows a user to browse through a pre-populated list of restaurants in the area, display the restaurant's information, and it allows you to map your way to the restaurant. I stored my restaurant data in an SQLite database and using a SQLiteOpenDatabaseHelper, my app can search, retrieve, and edit the columns of restaurant data. The app includes the use of an ArrayAdapter, Listeners, and Intents as well as the implementation of some material design.
+description: Manhattan Eats is a neighborhood guide app made in a fashion similar to the app Yelp. The app allows a user to browse through a pre-populated list of restaurants in the area, it displays the restaurant's information, and it allows you to map your way to the restaurant. I stored my restaurant data in an SQLite database and using a SQLiteOpenDatabaseHelper, the app can search, retrieve, and edit the columns of restaurant data. The app includes the use of an ArrayAdapter, Listeners, and Intents as well as the implementation of some material design.
 ---
 
-<a href = "https://github.com/chris-shum/Project-2">Manhattan Eats on GitHub</a>
-
+<div style="text-align:center">
+<a href= "https://github.com/chris-shum/Project-2" target="_blank">
+<img alt='View on GitHub' src= "http://chris-shum.github.io/img/github.png" width="180"/>
+</a>
+</div>
